# nomad-otel-metrics-scraper

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml  tag.yml  test.yml
dev/: otelcol-config.yml  prometheus.yaml
src/: main.rs
